// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostOptions should match snapshot, no option for system message to user who doesn't have the permission to delete 1`] = `null`;

exports[`PostOptions should match snapshot, showing Delete option only for system message to user who has permission to delete 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(SlideUpPanel)
    allowStayMiddle={false}
    initialPosition={124}
    marginFromTop={476}
    onRequestClose={[Function]}
  >
    <PostOption
      destructive={true}
      icon="trash"
      onPress={[Function]}
      text="Delete"
    />
  </Connect(SlideUpPanel)>
</View>
`;

exports[`PostOptions should match snapshot, showing all possible options 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Connect(SlideUpPanel)
    allowStayMiddle={false}
    initialPosition={424}
    marginFromTop={176}
    onRequestClose={[Function]}
  >
    <PostOption
      icon="edit"
      onPress={[Function]}
      text="Edit"
    />
    <PostOption
      icon="flag"
      onPress={[Function]}
      text="Flag"
    />
    <PostOption
      icon="pin"
      onPress={[Function]}
      text="Pin to Channel"
    />
    <PostOption
      icon="emoji"
      onPress={[Function]}
      text="Add Reaction"
    />
    <PostOption
      icon="link"
      onPress={[Function]}
      text="Copy Permalink"
    />
    <PostOption
      icon="copy"
      onPress={[Function]}
      text="Copy Text"
    />
    <PostOption
      destructive={true}
      icon="trash"
      onPress={[Function]}
      text="Delete"
    />
  </Connect(SlideUpPanel)>
</View>
`;
